--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME='Risper 2.0'
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=worksuite_rise_crm
+DB_DATABASE=risper_crm
 DB_USERNAME=root
 DB_PASSWORD=
 
