--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "tonysm/rich-text-laravel": "^3.3",
         "yajra/laravel-datatables-oracle": "^12.4"
     },
     "require-dev": {
